# mlx-embedding-server

./: .gitignore  README.ja.md  README.md  pyproject.toml  server.py
.mise/tasks/logs/: err  out
.mise/tasks/service/: install  start  status  stop  uninstall
