[project]
name = "mlx-embedding-server"
version = "0.1.0"
description = "Single-purpose HTTP server for multimodal embeddings via mlx-embeddings (Apple Silicon / MLX). Defaults to Qwen3-VL-Embedding-2B."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.31.2",
    "mlx-embeddings>=0.1.0",
    # The Qwen3-VL image processor (HF AutoImageProcessor) requires torch/torchvision.
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "fastapi",
    "uvicorn",
    "pillow",
    "pydantic",
]
